native_text_recognition_pipeline/lib/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<TextRecognitionPipeline> Function()>()
external ffi.Pointer<TextRecognitionPipeline> TextRecognition_create();

@ffi.Native<ffi.Void Function(ffi.Pointer<TextRecognitionPipeline>)>()
external void TextRecognition_destroy(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<TextRecognitionPipeline>, ffi.Pointer<ffi.Char>)
>()
external void TextRecognition_setImage(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
  ffi.Pointer<ffi.Char> imagePath,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<TextRecognitionPipeline>, C_PreprocessingConfig)
>()
external void TextRecognition_preprocessingStep(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
  C_PreprocessingConfig config,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<TextRecognitionPipeline>)>()
external void TextRecognition_initTesseract(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<TextRecognitionPipeline>)>()
external void TextRecognition_textRecognitionStep(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<TextRecognitionPipeline>, ffi.Pointer<ffi.Char>)
>()
external int TextRecognition_initUnigramDictionary(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
  ffi.Pointer<ffi.Char> filepath,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<TextRecognitionPipeline>, ffi.Pointer<ffi.Char>)
>()
external int TextRecognition_initBigramDictionary(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
  ffi.Pointer<ffi.Char> filepath,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<TextRecognitionPipeline>,
    C_PostprocessingConfig,
  )
>()
external void TextRecognition_postprocessingStep(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
  C_PostprocessingConfig config,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<TextRecognitionPipeline>)>()
external int TextRecognition_getResultCount(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
);

@ffi.Native<
  C_RecognitionResultItem Function(
    ffi.Pointer<TextRecognitionPipeline>,
    ffi.Int,
  )
>()
external C_RecognitionResultItem TextRecognition_getResultItem(
  ffi.Pointer<TextRecognitionPipeline> pipeline,
  int index,
);

final class TextRecognitionPipeline extends ffi.Opaque {}

final class C_PreprocessingConfig extends ffi.Struct {
  @ffi.Bool()
  external bool grayscale;

  @ffi.Bool()
  external bool unsharpMasking;

  @ffi.Bool()
  external bool binary;

  @ffi.Bool()
  external bool dewarp;

  @ffi.Bool()
  external bool resize;
}

final class C_PostprocessingConfig extends ffi.Struct {
  @ffi.Bool()
  external bool useTopResultFromDictionary;

  @ffi.Bool()
  external bool useContext;
}

final class C_RecognitionResultItem extends ffi.Struct {
  @ffi.Int()
  external int x1;

  @ffi.Int()
  external int y1;

  @ffi.Int()
  external int x2;

  @ffi.Int()
  external int y2;

  external ffi.Pointer<ffi.Char> word;

  @ffi.Bool()
  external bool is_eol;
}
